[project]
name = "videoTranslationImpl"
version = "0.0.1"
authors = [
  { name="Sahil Yerawar", email="syerawar@umass.edu" },
]
description = "An experimental package providing server and client implementations for VideoTranslation Task of Heygen"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ysahil97/VideoProcessingSetup"